# meteo

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  SETUP  TODO  UPGRADE  configure.ac  configureit
browser/: Makefile.am  meteobrowser.php
conf/: Makefile.am  meteo-60.xml  meteo.xml  powermeter.xml  salidomo.xml  solivia.xml
db/: Makefile.am  README  meteo.sql  powermeter.sql  solivia.sql
doc/: Makefile.am  uds10.in
gallery/: Makefile.am
html/: Makefile.am  about.xml  buildgallery.sh  gallery.xml  gallery.xml.in  meteo.css  news.xml.in  prereq.xml  support.xml
include/: BasicRecorder.h  Configuration.h  CurrentConverter.h  CurrentRecorder.h  CurrentValue.h  EnergyConverter.h  EnergyValue.h  Frame.h  GraphWindow.h  Makefile.am  PowerConverter.h  PowerRecorder.h  PowerValue.h  Query.h  Tdata.h  UdpOutlet.h  VoltageRecorder.h  XmlOutlet.h  config.h.in  meteo_vers.h
lib/: Averager.cc  Averager.cpp  Channel.cc  Channel.cpp  ChunkDumper.cc  ChunkDumper.cpp  Configuration.cc  CurrentConverter.cc  CurrentConverter.cpp  CurrentRecorder.cpp  CurrentValue.cpp  Daemon.cc  Dataset.cc  EnergyConverter.cc  EnergyValue.cpp  FQField_internals.cc  Field_internals.cpp  Format.cpp  Frame.cc  GraphWindow.cpp  Graphics.cc  Graphics.cpp  Lock.cc  Lock.cpp  Makefile.am  Mapfile.cc  Mapfile.cpp  MsgDequeuer.cpp  MsgQueuer.cpp  Pidfile.cpp  PowerConverter.cc  PowerConverter.cpp  PowerRecorder.cc  PowerValue.cpp  Query.cpp  QueryProcessor.cc  QueryProcessor.cpp  QueryResult.cpp  SensorStation.cc  SensorStationInfo.cpp  (+17 more)
man/: Makefile.am  meteo.xml.5  meteoavg.1  meteodbdump.1  meteodequeue.1  meteodraw.1  meteolabel.1  meteolast.1  meteomap.1  meteopoll.1  meteosunriset.1
src/: Makefile.am  meteo-test.xml  meteoavg.cc  meteoavg.cpp  meteodbdump.cc  meteodbdump.cpp  meteodequeue.cc  meteodraw.cc  meteodraw.cpp  meteolabel.cc  meteolast.cc  meteolast.cpp  meteomap.cc  meteomap.cpp  meteopacket.cc  meteopacket.cpp  meteopoll.cc  meteosensors.cpp  meteosunriset.cc  meteosunriset.cpp  packet.csv
support/: Makefile.am  meteoavg.service  meteodbmigrate.cc  meteodbmigrate.cpp  meteodequeue.service  meteopoll.service
