#
# Makefile.am -- generate a portable Makefile for the meteo interface package
#
# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
#
# $Id: Makefile.am,v 1.5 2004/05/08 20:09:32 afm Exp $
#
EXTRA_DIST = Altendorf.xml.gone						\
	Gurin.xml.gone							\
	meteo.guenthers.net.xml.gone					\
	NFO.xml.gone							\
	Arrowwood.xml.gone						\
	ChinoHills.xml.gone						\
	MartinLutherCollege.xml.gone 					\
	Terassa.xml.gone						\
	Lajeado.xml.gone


