#
# Makefile.am -- generate a portable Makefile for the meteo interface package
#
# (c) 2001-2021 Prof. Dr. Andreas Mueller
#

noinst_HEADERS =							\
	Averager.h							\
	Axis.h								\
	BarometerReader.h						\
	BasicConverter.h						\
	BasicPacketReader.h						\
	BasicQueryResult.h						\
	BasicRecorder.h							\
	BasicValue.h							\
	BasicValueFactory.h						\
	BytePacketReader.h						\
	Calibrator.h							\
	Channel.h							\
	ChannelFactory.h						\
	ChunkDumper.h							\
	Color.h								\
	Configuration.h							\
	Converter.h							\
	ConverterFactory.h						\
	Daemon.h							\
	DataRecorder.h							\
	Datarecord.h							\
	Dataset.h							\
	Datasink.h							\
	DavisStation.h							\
	Derivedvalue.h							\
	Dewpoint.h							\
	Dimension.h							\
	Energy.h							\
	ExtraTemperatureReader.h					\
	FQField.h							\
	FQField_internals.h						\
	Field.h								\
	Field_internals.h						\
	FileChannel.h							\
	Format.h							\
	Frame.h								\
	GraphPoint.h							\
	GraphWindow.h							\
	Graphics.h							\
	GroWeather.h							\
	Health.h							\
	Heatindex.h							\
	HumidityConverter.h						\
	HumidityRecorder.h						\
	HumidityValue.h							\
	ImageMap.h							\
	Label.h								\
	LastRecorder.h							\
	LeafwetnessConverter.h						\
	LeafwetnessRecorder.h						\
	LeafwetnessValue.h						\
	Level.h								\
	LevelConverter.h						\
	LevelRecorder.h							\
	LevelValue.h							\
	Lock.h								\
	MapArea.h							\
	Mapfile.h							\
	MeteoException.h						\
	MeteoTypes.h							\
	MinmaxRecorder.h						\
	MoistureConverter.h						\
	MoistureRecorder.h						\
	MoistureValue.h							\
	MsgCommon.h							\
	MsgDequeuer.h							\
	MsgQueuer.h							\
	NibblePacketReader.h						\
	OldDavisStation.h						\
	OldTemperatureReader.h						\
	OldWindReader.h							\
	Outlet.h							\
	PacketReader.h							\
	PacketReaderFactory.h						\
	Pidfile.h							\
	Point.h								\
	PowerConverter.h						\
	PowerRecorder.h							\
	PowerValue.h							\
	PressureConverter.h						\
	PressureRecorder.h						\
	PressureValue.h							\
	Query.h								\
	QueryOutlet.h							\
	QueryProcessor.h						\
	QueryResult.h							\
	Rain.h								\
	RainConverter.h							\
	RainRate.h							\
	RainRateConverter.h						\
	RainRateReader.h						\
	RainRateRecorder.h						\
	RainReader.h							\
	RainRecorder.h							\
	ReaderInfo.h							\
	Recorder.h							\
	RecorderFactory.h						\
	Rectangle.h							\
	Scale.h								\
	SensorStation.h							\
	SensorStationInfo.h						\
	SerialChannel.h							\
	ShortPacketReader.h						\
	SolarConverter.h						\
	SolarRecorder.h							\
	SolarValue.h							\
	Station.h							\
	StationFactory.h						\
	StationInfo.h							\
	Sun.h								\
	SunData.h							\
	TcpChannel.h							\
	Tdata.h								\
	TemperatureConverter.h						\
	TemperatureReader.h						\
	TemperatureRecorder.h						\
	TemperatureValue.h						\
	TimeConverter.h							\
	TimeReader.h							\
	TimeRecorder.h							\
	TimeValue.h							\
	Timelabel.h							\
	Timestamp.h							\
	Timeval.h							\
	TransmitterConverter.h						\
	TransmitterRecorder.h						\
	TransmitterStatus.h						\
	UdpOutlet.h							\
	UVConverter.h							\
	UVReader.h							\
	UVRecorder.h							\
	UVValue.h							\
	Value.h								\
	ValueFactory.h							\
	VantagePro.h							\
	VantageProWindReader.h						\
	Vector.h							\
	VoltageConverter.h						\
	VoltageReader.h							\
	VoltageRecorder.h						\
	VoltageValue.h							\
	CurrentConverter.h						\
	CurrentRecorder.h						\
	CurrentValue.h							\
	WMII.h								\
	WMIIWindReader.h						\
	Wind.h								\
	WindConverter.h							\
	WindRecorder.h							\
	WindSpeed.h							\
	Windchill.h							\
	XmlOutlet.h							\
	XmlOutletDelegate.h						\
	XmlOutletFactory.h						\
	crc.h 								\
	mdebug.h							\
	printver.h

VERSION_FILE = meteo_vers.h

EXTRA_DIST = $(VERSION_FILE) README

all-local:	$(VERSION_FILE)

meteo_vers.h:	../configure.ac
	../shtool version -l c -s @VERSION@ -n Meteo -p meteo_ $(VERSION_FILE)

